--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   </head>
   <body>
-    <div id=markup><h1> hacker day labor</h1>
+    <div id=markup><h1>day labor nerds</h1>
 
 <p>Know what you need <strong>today</strong>?  Wish you had it <strong>yesterday</strong>?  Get it <strong><em>right now!</em></strong></p>
 <p>All hackers posted within the last six hours.  <a href="/post">Post up here</a>.</p>
